--- a/css/styles.css
+++ b/css/styles.css
@@ -439,7 +439,7 @@ video{
 figure {
     margin: 0;
     position: relative;
-    top: 60px;
+    /* top: 60px; */
     }
 .social li a :hover{
   opacity: 1;
