--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1989,6 +1989,12 @@ body {
     padding-top: 10%;
     padding-bottom: 10%;
   }
+  .contact_footer_menu {
+    width: 16% !important;
+  }
+  .sign_btn {
+    display: contents !important;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
